terraform/infra/dev/certmanager-certificate/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: vi-dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx-external
  tls:
  - hosts:
    - dev-app.vi-demo.com
    secretName: echo2-tls
  rules:
    - host: dev-app.vi-demo.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: devops-demo
                port:
                  number: 3000
